--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="styles/login.css">
     <title>ITBANK - Login</title>
@@ -27,13 +28,14 @@
                 <h2 class="row mb-5 text-center">Te damos la bienvenida</h2>
                 <form class="w-75">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="DNI">
+                        <input type="text" class="form-control" placeholder="Número de documento">
                         <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Tipo</button>
                         <ul class="dropdown-menu dropdown-menu-end">
                           <li><a class="dropdown-item" href="#">DNI</a></li>
                           <li><a class="dropdown-item" href="#">Libreta Cívica</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                          <li><a class="dropdown-item" href="#">Separated link</a></li>
+                          <li><a class="dropdown-item" href="#">Libreta de Enrolamiento</a></li>
+                          <li><a class="dropdown-item" href="#">Cédula de Identidad</a></li>
+                          <li><a class="dropdown-item" href="#">Pasaporte</a></li>
                         </ul>
                       </div>
                       
