--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="styles/index.css">
     <title>ITBANK</title>
 </head>
-<body>
-    
-</body>
+    <main>
+        <body>
+            <div class="contenedor">
+                <div class="header">//HEADER//</div> 
+                    <div class="contenido">
+                        <div class="cuentas"><h1>Tus Cuentas </h1>
+                       
+                            <article class="articulo"> <h2>Cuenta Actual</h2> <p>XXXX XXXX XXXX XXXX</p></article>
+                            <article class="articulo"><h2>Cuenta de Ahorro</h2><p>XXXX XXXX XXXX XXXX</p></article>
+                            <article class="articulo"> <h2>Cuenta Corriente</h2> <p>XXXX XXXX XXXX XXXX</p></article>
+                            <div class="pin"> <h2>Tarjetas de credito asociadas a tu cuenta</h2>
+                            <div class="content-img">
+                                <img src="https://cdn-icons-png.flaticon.com/512/1159/1159628.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="otherop"> //OTHER OPERATIONS//</div>
+                        <div class="perfilgraf">//PERFIL Y GRAFICA//</div> 
+                        <div class="recentact">//RECENT ACTIVITY//</div>
+                    </div>
+                <div class="footer">//FOOTER//</div> 
+            </div>           
+        </body>
+    </main>
 </html>
