--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
                     <div class="contenido">
                         <div class="cuentas"><h1>Tus Cuentas </h1>
                        
-                            <article class="articulo"> <h2>Cuenta Actual</h2> <p>XXXX XXXX XXXX XXXX</p></article>
-                            <article class="articulo"><h2>Cuenta de Ahorro</h2><p>XXXX XXXX XXXX XXXX</p></article>
-                            <article class="articulo"> <h2>Cuenta Corriente</h2> <p>XXXX XXXX XXXX XXXX</p></article>
+                            <article class="articulo"> 
+
+                                <article class="articulo2"><h2>Cuenta Actual</h2> <p>XXXX XXXX XXXX XXXX</p></article>
+                                <article class="articulo3"><h3>$2.437.29</h3></article>
+                            </article>
+                            <article class="articulo"> 
+                                <article class="articulo2"><h2>Cuenta Actual</h2> <p>XXXX XXXX XXXX XXXX</p></article>
+                                <article class="articulo3"><h3>$4.832,36</h3></article>
+                            </article>
+                            <article class="articulo"> 
+                                <article class="articulo2"><h2>Cuenta Actual</h2> <p>XXXX XXXX XXXX XXXX</p></article>
+                                <article class="articulo3"><h3>$1.329,89</h3></article>
+                            </article>
                             <div class="pin"> <h2>Tarjetas de credito asociadas a tu cuenta</h2>
                             <div class="content-img">
                                 <img src="https://cdn-icons-png.flaticon.com/512/1159/1159628.png" alt="">
