--- a/otras.html
+++ b/otras.html
@@ -9,14 +9,59 @@
 <body>
 
 
-    <h3>Otras opciones <span class="otras"></h3>
-    <ul class="opciones">
-        <li class="list-group-item">Mis cuentas</li>
-        <li class="list-group-item">Transferir</li>
-        <li class="list-group-item">Cobrar</li>
-        <li class="list-group-item">Historial</li>
-        <li class="list-group-item">Boton de arrepentimiento</li>
-    </ul>
+    <h2>Otras opciones <span class="otras"></h2>
+
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingOne">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              Transferir/cobrar
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+                <ul>
+                    <li> Presentar QR <br></li>
+                    <li> Por CBU <br></li>
+                    <li> Numero de celular<br> </li>
+                  </ul>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Pagar servicio
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+                <ul>
+                    <li> Buscar empresa<br></li>
+                    <li> Movistar <br></li>
+                   
+                  </ul>
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush-headingThree">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              Bolsa
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body"> 
+                <ul>
+                    <li> Mercado libre<br></li>
+                    <li> Bitcoin <br></li>
+                    <li> Otras <br></li>
+                   
+                  </ul>
+            </div>
+          </div>
+        </div>
+      </div>
 </div>
 </body>
 </html>
