--- a/homebanking.html
+++ b/homebanking.html
@@ -145,13 +145,14 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Transferir
+                  Transferir o Cobrar
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionOtrasOp">
                 <div class="accordion-body">
                   <a href="#">Transferir a CBU/CVU</a>
-                  <a href="#">Transferir por otro medio</a>
+                  <a href="#">Transferir por QR</a>
+                  <a href="#">Transferir por Celular</a>
                 </div>
               </div>
             </div>
@@ -168,7 +169,7 @@
               </div>
             </div>
             <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
+              <h2 class="accordion-header" id="headingFour">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                   Retiros
                 </button>
@@ -176,6 +177,21 @@
               <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionOtrasOp">
                 <div class="accordion-body">
                   <strong>No hay retiros.</strong> <a href="#"> Realiza uno</a>                 
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFive">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                  Bolsa de valores
+                </button>
+              </h2>
+              <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionOtrasOp">
+                <div class="accordion-body">
+                  <strong>Mercado Libre: +3%</strong>
+                  <strong>YPF -2%</strong>
+                  <strong>Globant -5%</strong>
+                  <a href="#">Ir a la bolsa</a>                 
                 </div>
               </div>
             </div>
