--- a/List/index.html
+++ b/List/index.html
@@ -23,7 +23,7 @@
         </div>
         <form onsubmit="addNewTask(event)" >
             <input type="text" name="taskText" autocomplete="off" placeholder="Destinatario" class="roundBorder">
-            <input type="number" name="fecha" autocomplete="off" placeholder="Fecha" class="caja">
+            <input type="number" name="fecha" autocomplete="off" placeholder="Monto" class="caja">
             <button type="submit" class="addTaskButton">+</button>
             <button type="button" class="orderButton roundBorder" onclick="renderOrderedTasks()">Transferir</button>
         </form>
