--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<base href="/homebanking-ITBA/"> <!-- URL base para Github Pages -->
+		<!-- <base href="/homebanking-ITBA/">  --><!-- URL base para Github Pages -->
 		
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
@@ -29,24 +29,24 @@
 				</div>
 				<div class="col-5 d-flex flex-column justify-content-center align-items-center">
 					<h2 class="row mb-5 text-center">Te damos la bienvenida</h2>
-					<form class="w-75">
-						<div class="input-group mb-3">
+					<form id="form" class="w-75">
+						<div id="doc" class="input-group mb-3">
 							<input type="text" class="form-control" placeholder="Número de documento">
 							<button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Tipo</button>
 							<ul class="dropdown-menu dropdown-menu-end">
-								<li><a class="dropdown-item" href="index.html">DNI</a></li>
-								<li><a class="dropdown-item" href="index.html">Libreta Cívica</a></li>
-								<li><a class="dropdown-item" href="index.html">Libreta de Enrolamiento</a></li>
-								<li><a class="dropdown-item" href="index.html">Cédula de Identidad</a></li>
-								<li><a class="dropdown-item" href="index.html">Pasaporte</a></li>
+								<li><a data-id="DNI" class="dropdown-item">DNI</a></li>
+								<li><a data-id="LC" class="dropdown-item">Libreta Cívica</a></li>
+								<li><a data-id="LE" class="dropdown-item">Libreta de Enrolamiento</a></li>
+								<li><a data-id="CI" class="dropdown-item">Cédula de Identidad</a></li>
+								<li><a data-id="PP" class="dropdown-item">Pasaporte</a></li>
 							</ul>
 						</div>
 						<div class="input-group mb-3">
-							<input type="text" class="form-control" placeholder="Usuario">
+							<input type="text" id="usuario" class="form-control" placeholder="Usuario">
 						</div>
 						<div class="input-group mb-3">
-							<input type="text" class="form-control" placeholder="Clave ITBANK" aria-describedby="key">
-							<button class="btn btn-outline-secondary d-flex align-items-center" type="button" id="key">
+							<input id="clave" type="password" class="form-control" placeholder="Clave ITBANK" aria-describedby="key">
+							<button id="clave-toggle" class="btn btn-outline-secondary d-flex align-items-center" type="button" id="key">
 								<svg xmlns="http://www.w3.org/2000/svg" class="eye" viewBox="0 0 20 20" fill="currentColor">
 									<path fill-rule="evenodd" d="M3.707 2.293a1 1 0 00-1.414 1.414l14 14a1 1 0 001.414-1.414l-1.473-1.473A10.014 10.014 0 0019.542 10C18.268 5.943 14.478 3 10 3a9.958 9.958 0 00-4.512 1.074l-1.78-1.781zm4.261 4.26l1.514 1.515a2.003 2.003 0 012.45 2.45l1.514 1.514a4 4 0 00-5.478-5.478z" clip-rule="evenodd" />
 									<path d="M12.454 16.697L9.75 13.992a4 4 0 01-3.742-3.741L2.335 6.578A9.98 9.98 0 00.458 10c1.274 4.057 5.065 7 9.542 7 .847 0 1.669-.105 2.454-.303z" />
@@ -54,18 +54,20 @@
 							</button>
 						</div>
 						<div class="form-check">
-							<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-							<label class="form-check-label" for="flexCheckDefault">
+							<input class="form-check-input" type="checkbox" value="" id="recordarme">
+							<label class="form-check-label" for="recordarme">
 							Recordarme
 							</label>
 						</div>
+						<button type="submit" id="submit" class="btn btn-outline-primary mt-3">Ingresar</button>
 					</form>
-					<a href="homebanking.html" class="btn btn-outline-primary mt-3">Ingresar</a>
+					<div id="mensaje" class="mt"></div>
 					<a href="index.html" class="mt-5 fs-6 text-decoration-none">Olvidé mi contraseña</a>
 					<p href="index.html" class="mt-2 fs-6">¿No tenés un usuario? <a class="text-decoration-none" href="index.html">Registrate</a></p>
 				</div>
 			</div>
 		</div>
 	</body>
+	<script src="js/login.js"></script>
 </html>
 
