--- a/homebanking.html
+++ b/homebanking.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<base href="/homebanking-ITBA/"> <!-- URL base para Github Pages -->
+		<!-- <base href="/homebanking-ITBA/"> --> <!-- URL base para Github Pages -->
 		
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
@@ -192,6 +192,18 @@
 								<strong>YPF -2%</strong>
 								<strong>Globant -5%</strong>
 								<a href="homebanking.html">Ir a la bolsa</a>                 
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h2 class="accordion-header" id="headingSix">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+							Lista de gastos
+							</button>
+						</h2>
+						<div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionGastos">
+							<div class="accordion-body">
+								<a href="gastos.html">Abrir lista de gastos</a>                 
 							</div>
 						</div>
 					</div>
