--- a/homebanking.html
+++ b/homebanking.html
@@ -12,6 +12,8 @@
 		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 		<link rel="stylesheet" href="styles/homebanking.css">
 		<title>ITBANK - Homebanking</title>
+
+
 	</head>
 	<body>
 		<!-- Vickyd Header -->
@@ -35,11 +37,15 @@
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 							<li class="nav-item">
 								<a class="nav-link" aria-current="page" href="homebanking.html">Inicio</a>
+								<img class="nav-icon" src="images/inicio.png">
+								<a class="nav-link active" aria-current="page" href="homebanking.html">Inicio</a>
 							</li>
 							<li class="nav-item">
+								<img class="nav-icon" src="images/notifs.png">
 								<a class="nav-link" href="homebanking.html">Notificaciones</a>
 							</li>
 							<li class="nav-item">
+								<img class="nav-icon" src="images/ayuda.png">
 								<a class="nav-link" href="homebanking.html">Ayuda</a>
 							</li>
 						</ul>
@@ -122,7 +128,7 @@
 					<div class="cuadrado-4">
 						<label><b>Expenses report</b></label>
 						<div>
-							<canvas id="myChart" width="200px" height="100px"></canvas>
+							<canvas id="myChart" width="200px" height="100%"></canvas>
 						</div>
 					</div>
 				</section>
@@ -286,6 +292,7 @@
 			  config
 			);
 		</script>
+		
 	</body>
 	<script src="js/homebanking.js"></script>
 </html>
