--- a/homebanking.html
+++ b/homebanking.html
@@ -32,12 +32,15 @@
 					<div class="collapse navbar-collapse" id="navbarText">
 						<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 							<li class="nav-item">
+								<img class="nav-icon" src="images/inicio.png">
 								<a class="nav-link active" aria-current="page" href="homebanking.html">Inicio</a>
 							</li>
 							<li class="nav-item">
+								<img class="nav-icon" src="images/notifs.png">
 								<a class="nav-link" href="homebanking.html">Notificaciones</a>
 							</li>
 							<li class="nav-item">
+								<img class="nav-icon" src="images/ayuda.png">
 								<a class="nav-link" href="homebanking.html">Ayuda</a>
 							</li>
 						</ul>
@@ -251,6 +254,12 @@
 							<img src="images/ticket.png" alt="">
 						</div>
 						<p>Lista de gastos</p>
+					</a>
+					<a class="opcion" href="Conversor.html">
+						<div class="opcion-icon">
+							<img src="images/conversion.png" alt="">
+						</div>
+						<p>Conversor</p>
 					</a>
 				</div>
 			</section>
