Añadidos valores de dólar

--- a/conversor.html
+++ b/conversor.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="GContainer">
-        <h1>Convesor de Pesos</h1>
+        <h1>Conversor de Pesos</h1>
     <p>Seleccione moneda y cantidad para su conversion:</p>
 
     <div class="cContainer1">
