Valores del Dolar
DOLAR HOY

--- a/homebanking.html
+++ b/homebanking.html
@@ -299,12 +299,12 @@
 						</div>
 						<p>Lista de gastos</p>
 					</a>
-					<a class="opcion" href="Conversor.html">
+					<!--<a class="opcion" href="Conversor.html">
 						<div class="opcion-icon">
 							<img src="images/conversion.png" alt="">
 						</div>
 						<p>Conversor</p>
-					</a>
+					</a>-->
 				</div>
 			</section>
 
