--- a/conversor.html
+++ b/conversor.html
@@ -1,4 +1,4 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -51,4 +51,4 @@
     </div>
     <script src="js/conversor.js"></script>
 </body>
-</html>-->
+</html>
