--- a/conversor.html
+++ b/conversor.html
@@ -12,7 +12,7 @@
     <a class="volver" href="homebanking.html">Volver</a></div>
     <div class="GContainer">
         <h1>Conversor de Pesos</h1>
-    <p>Seleccione moneda y cantidad para su conversion:</p>
+    <p>Seleccione moneda y cantidad para su conversión:</p>
 
     <div class="cContainer1">
         <div class="moneda">
