--- a/homebanking.html
+++ b/homebanking.html
@@ -158,7 +158,7 @@
 						</div>
 						<label class="label-1"><b>Jane Doe</b></label>
 						<label class="label-2">San Francisco - USA</label>
-						<a href="" style="text-decoration: none;">Configuración de perfil</a>
+						<a href="#" style="text-decoration: none;">Configuración de perfil</a>
 					</div>
 					<div class="contenedor-cuadrado-23">
 						<div class="cuadrado-2">
@@ -182,86 +182,7 @@
 			<!-- Ramiro Otras Opciones-->
 			<section class="otrasop">
 				<h2>Otras Operaciones</h2>
-				<!-- <div class="accordion" id="accordionOtrasOp">
-
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="headingOne">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-							Mis Depósitos
-							</button>
-						</h2>
-						<div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionOtrasOp">
-							<div class="accordion-body">
-								<strong>No hay dépositos.</strong> <a href="homebanking.html"> Realiza uno</a>
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="headingTwo">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-							Transferir o Cobrar
-							</button>
-						</h2>
-						<div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionOtrasOp">
-							<div class="accordion-body">
-								<a href="homebanking.html">Transferir a CBU/CVU</a>
-								<a href="homebanking.html">Transferir por QR</a>
-								<a href="homebanking.html">Transferir por Celular</a>
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="headingThree">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-							Préstamos
-							</button>
-						</h2>
-						<div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionOtrasOp">
-							<div class="accordion-body">
-								<a href="homebanking.html">Pedir un préstamo</a>
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="headingFour">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-							Retiros
-							</button>
-						</h2>
-						<div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionOtrasOp">
-							<div class="accordion-body">
-								<strong>No hay retiros.</strong> <a href="homebanking.html"> Realiza uno</a>                 
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="headingFive">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-							Bolsa de valores
-							</button>
-						</h2>
-						<div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionOtrasOp">
-							<div class="accordion-body">
-								<strong>Mercado Libre: +3%</strong>
-								<strong>YPF -2%</strong>
-								<strong>Globant -5%</strong>
-								<a href="homebanking.html">Ir a la bolsa</a>                 
-							</div>
-						</div>
-					</div>
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="headingSix">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-							Lista de gastos
-							</button>
-						</h2>
-						<div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionGastos">
-							<div class="accordion-body">
-								<a href="gastos.html">Abrir lista de gastos</a>                 
-							</div>
-						</div>
-					</div>
-				</div> -->
+				
 				<div class="gridop">
 					<a class="opcion">
 						<div class="opcion-icon">
@@ -293,18 +214,24 @@
 						</div>
 						<p>Bolsa de valores</p>
 					</a>
+					<a class="opcion">
+						<div class="opcion-icon">
+							<img src="images/servicio.png" alt="">
+						</div>
+						<p>Pagar Servicios</p>
+					</a>
+					<a class="opcion" href="conversor.html">
+						<div class="opcion-icon">
+							<img src="images/conversion.png" alt="">
+						</div>
+						<p>Conversor</p>
+					</a>
 					<a class="opcion" href="gastos.html">
 						<div class="opcion-icon">
 							<img src="images/ticket.png" alt="">
 						</div>
 						<p>Lista de gastos</p>
 					</a>
-					<!--<a class="opcion" href="Conversor.html">
-						<div class="opcion-icon">
-							<img src="images/conversion.png" alt="">
-						</div>
-						<p>Conversor</p>
-					</a>-->
 				</div>
 			</section>
 
